// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WelcomePage2 matches the snapshot desktop 1`] = `
<div>
  <div
    class="acss-1w677fm"
  >
    <img
      alt="background-1"
      src="test-file-stub"
    />
    <img
      alt="background-2"
      src="test-file-stub"
    />
    <img
      alt="background-3"
      src="test-file-stub"
    />
    <img
      alt="background-4"
      src="test-file-stub"
    />
    <div
      class="acss-sdwng8 ant-flex css-dev-only-do-not-override-tpassh ant-flex-align-center ant-flex-justify-center"
    >
      <div
        class="ant-layout acss-18z7dro css-dev-only-do-not-override-tpassh"
      >
        <h1
          class="ant-typography acss-jvlg32 css-dev-only-do-not-override-tpassh"
        >
          Welcome
        </h1>
        <input
          class="ant-input css-dev-only-do-not-override-tpassh ant-input-outlined acss-1ghgz8q"
          placeholder="email"
          type="text"
          value=""
        />
        <div
          class="acss-u29sg6"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              email
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              LogIn
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              CreateAccount
            </span>
          </button>
        </div>
        <div
          class="ant-flex css-dev-only-do-not-override-tpassh ant-flex-wrap-wrap ant-flex-justify-center ant-flex-gap-large"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WelcomePage2 matches the snapshot laptop 1`] = `
<div>
  <div
    class="acss-1w677fm"
  >
    <img
      alt="background-1"
      src="test-file-stub"
    />
    <img
      alt="background-2"
      src="test-file-stub"
    />
    <img
      alt="background-3"
      src="test-file-stub"
    />
    <img
      alt="background-4"
      src="test-file-stub"
    />
    <div
      class="acss-sdwng8 ant-flex css-dev-only-do-not-override-tpassh ant-flex-align-center ant-flex-justify-center"
    >
      <div
        class="ant-layout acss-18z7dro css-dev-only-do-not-override-tpassh"
      >
        <h1
          class="ant-typography acss-jvlg32 css-dev-only-do-not-override-tpassh"
        >
          Welcome
        </h1>
        <input
          class="ant-input css-dev-only-do-not-override-tpassh ant-input-outlined acss-1ghgz8q"
          placeholder="email"
          type="text"
          value=""
        />
        <div
          class="acss-u29sg6"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              email
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              LogIn
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              CreateAccount
            </span>
          </button>
        </div>
        <div
          class="ant-flex css-dev-only-do-not-override-tpassh ant-flex-wrap-wrap ant-flex-justify-center ant-flex-gap-large"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WelcomePage2 matches the snapshot mobile 1`] = `
<div>
  <div
    class="acss-1w677fm"
  >
    <div
      class="acss-sdwng8 ant-flex css-dev-only-do-not-override-tpassh ant-flex-align-center ant-flex-justify-center"
    >
      <div
        class="ant-layout acss-18z7dro css-dev-only-do-not-override-tpassh"
      >
        <h1
          class="ant-typography acss-jvlg32 css-dev-only-do-not-override-tpassh"
        >
          Welcome
        </h1>
        <input
          class="ant-input css-dev-only-do-not-override-tpassh ant-input-outlined acss-1ghgz8q"
          placeholder="email"
          type="text"
          value=""
        />
        <div
          class="acss-u29sg6"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              email
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              LogIn
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              CreateAccount
            </span>
          </button>
        </div>
        <div
          class="ant-flex css-dev-only-do-not-override-tpassh ant-flex-wrap-wrap ant-flex-justify-center ant-flex-gap-large"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              G
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-tpassh ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            type="button"
          >
            <span>
              VK
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
